@@ -238,13 +238,13 @@
 <tr class="row-odd"><td><strong>backscatter_coefficient</strong></td>
 <td>double</td>
 <td>{<em>time</em>, <em>vertical</em>}</td>
-<td>[km^-1]</td>
+<td>[sr^-1 km^-1]</td>
 <td>backscatter coefficient</td>
 </tr>
 <tr class="row-even"><td><strong>backscatter_coefficient_uncertainty</strong></td>
 <td>double</td>
 <td>{<em>time</em>, <em>vertical</em>}</td>
-<td>[km^-1]</td>
+<td>[sr^-1 km^-1]</td>
 <td>backscatter coefficient uncertainty</td>
 </tr>
 <tr class="row-odd"><td><strong>tropospheric_aerosol_optical_depth</strong></td>
